buy-bot-action-server/azure-pipelines/qdrant/k8s.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 'qdrant-db'
  namespace: 'agys-buy'
  labels:
    app: 'qdrant-db'
    service: 'qdrant-db'
spec:
  type: LoadBalancer
  selector:
    app: 'qdrant-db'
  ports:
    - name: http
      port: 6333
      targetPort: 6333
    - name: grpc
      port: 6334
      targetPort: 6334
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'qdrant-db'
  namespace: 'agys-buy'
  labels:
    app: 'qdrant-db'
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 'qdrant-db'
      version: v1
  template:
    metadata:
      labels:
        app: 'qdrant-db'
        version: v1
    spec:
      nodeSelector:
        nodepool: buydevint
      topologySpreadConstraints:
        - maxSkew: 3
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: 'qdrant-db'
      containers:
        - name: 'qdrant-db'
          image: 'agysacrqa.azurecr.io/buy-qdrant-db:latest'
          imagePullPolicy: Always
          ports:
            - containerPort: 6333
              name: http
          volumeMounts:
            - name: qdrant-storage
              mountPath: /qdrant/storage
          resources:
            limits:
              cpu: '1000m'
              memory: '2048Mi'
          livenessProbe:
            httpGet:
              path: /
              port: 6333
            initialDelaySeconds: 60
            failureThreshold: 2
            periodSeconds: 10
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 6333
            failureThreshold: 60
            periodSeconds: 10
            timeoutSeconds: 10
          startupProbe:
            httpGet:
              path: /
              port: 6333
            failureThreshold: 60
            periodSeconds: 10
            timeoutSeconds: 10
      volumes:
        - name: qdrant-storage
          emptyDir: {}
